# rust-cohort

./: .gitignore  README.md
rust-json-parser/: Cargo.toml  benchmark_results.md  cd  pyproject.toml
rust-json-parser/benchmarks/: download_fixtures.py
rust-json-parser/python/rust_json_parser/: __init__.py  __main__.py  benchmark.py  fixtures.py
rust-json-parser/src/: enums.rs  error.rs  lib.rs  main.rs  parser.rs  python_bindings.rs  scratch.rs  stream.rs  tokenizer.rs  value.rs
rust-json-parser/tests/: test_python_integration.py
test_data/: example.json
