[package]
name = "rust-json-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_json_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
rustc-hash = "2"
memchr = "2"

[features]
default = ["python"]
python = ["pyo3"]

[profile.release]
lto = "fat"
codegen-units = 1